--- a/TIN-BikeShop/src/BikeShop-React/src/App.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/App.css
@@ -1,38 +1,23 @@
 .App {
   text-align: center;
-}
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 70px;
   display: flex;
-  flex-direction: column;
+  flex: 0 0 auto;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Header-Nav{
+  display: flex;
+}
+.Header-Nav__Link{
+  margin: 0 10px 0 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
