--- a/TIN-BikeShop/src/BikeShop-React/src/App/App.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/App/App.css
@@ -1,3 +1,5 @@
+#root{
+}
 .App {
   text-align: center;
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
@@ -18,6 +20,23 @@
   display: flex;
 }
 .Header-Nav__Link{
+  text-decoration: none;
   margin: 0 10px 0 10px;
+  cursor: pointer;
+  transition: color 300ms ease;
 }
+.Header-Nav__Link:hover{
+  color: #d8d80e;
+}
+.Header-Nav__Link.active{
+  color: #259D4E;
+}
+.Header-Nav__Link.active:hover{
+  color: #d8d80e;
+}
+
+.App-Content{
+  background-color: #5F697C;
+}
+
 
