--- a/TIN-BikeShop/src/BikeShop-React/src/App/App.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/App/App.css
@@ -16,6 +16,7 @@
 }
 .Header-Nav{
   display: flex;
+  
 }
 .Header-Nav__Link{
   text-decoration: none;
@@ -32,7 +33,12 @@
 .Header-Nav__Link.active:hover{
   color: #d8d80e;
 }
-
+.Header-Nav__Link-Language{
+  text-decoration: none;
+  margin: 0 10px 0 10px;
+  cursor: pointer;
+  transition: color 300ms ease;
+}
 
 .App-Content{
   background-color: white;
