--- a/TIN-BikeShop/src/BikeShop-React/src/LogIn/LogIn.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/LogIn/LogIn.css
@@ -5,10 +5,13 @@
 }
 .LogIn-Container{
     width: 220px;
-    height: 270px;
+    height: 300px;
     background-color: #5F697C;
     margin: 25px;
     border-radius: 7px;
+    border-style: solid;
+    border-width: 1px;
+    box-shadow: 10px 10px grey;
 }
 
 .LogIn-Header{
@@ -16,6 +19,7 @@
 }
 .LogIn-Header h1{
     color: #B58934;
+    text-shadow: 3px 3px #0b62a0;
 }
 .LogIn-Form{
 }
@@ -26,8 +30,38 @@
     text-align: center;
 }
 .LogIn-Form label{
-    margin: 0 0 0 20px;
+    padding-top: 10px;
+    margin: 15px 0 0 20px;
+    font-weight: 600;
+    letter-spacing: 1px;
 }
 .LogIn-Form input{
-    margin: 5px 20px 20px 20px;
+    margin: 5px 20px 0 20px;
+    padding: 5px;
+    border: 2px solid #333333;
+}
+.LogIn-Form input[type=button]{
+    box-shadow: 4px 4px grey;
+    border-radius: 3px;
+    font-weight: 400;
+    font: bold 15px Arial;
+    text-decoration: none;
+    background-color: #EEEEEE;
+    color: #333333;
+    padding: 2px 6px 2px 6px;
+    border: 1px solid #333333;
+    cursor: pointer;
+    width: 150px;
+}
+.LogIn-Form input[type=button]:hover{
+    color: #d8d80e;
+    background-color: #282c34;
+}
+.LogIn-Red{
+    color:  #a82d17;
+    font-weight: 600;
+    display: inline-block;
+    text-shadow: 1px 1px #3f150e;
+    padding: 5px 7px 0 7px;
+    height: 55px;
 }
