--- a/TIN-BikeShop/src/BikeShop-React/src/Shop/Shop.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/Shop/Shop.css
@@ -37,26 +37,23 @@
 
 }
 .Shop-Element__Enter{
-    margin: 10px;
+    margin: 15px;
 }
 .Shop-Element__Enter .button {
-    margin: 10px;
     box-shadow: 4px 4px grey;
     border-radius: 3px;
     font-weight: 400;
-    width: 150px;
-    font: bold 11px Arial;
+    font: bold 15px Arial;
     text-decoration: none;
     background-color: #EEEEEE;
     color: #333333;
     padding: 2px 6px 2px 6px;
-    border-top: 1px solid #CCCCCC;
-    border-right: 1px solid #333333;
-    border-bottom: 1px solid #333333;
-    border-left: 1px solid #CCCCCC;
+    border: 1px solid #333333;
+    cursor: pointer;
   }
   .Shop-Element__Enter .button:hover {
     cursor: pointer;
     font-weight: 600;
-    background-color: #259D4E;
+    color: #d8d80e;
+    background-color: #282c34;
   }
