--- a/TIN-BikeShop/src/BikeShop-React/src/App/App.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/App/App.css
@@ -18,17 +18,17 @@
   display: inline-block;
 }
 .Header-Nav__Link{
-  display: block;
   text-decoration: none;
   margin: 0 10px 0 10px;
   cursor: pointer;
+  color: white;
   transition: color 300ms ease;
 }
 .Header-Nav__Link:hover{
   color: #d8d80e;
 }
 .Header-Nav__Link.active{
-  color: #259D4E;
+  color: #d8d80e;
 }
 .Header-Nav__Link.active:hover{
   color: #d8d80e;
