--- a/TIN-BikeShop/src/BikeShop-React/src/Products/Product.css
+++ b/TIN-BikeShop/src/BikeShop-React/src/Products/Product.css
@@ -17,8 +17,8 @@
 .Product-Element{
     display: inline-block;
     width: 300px;
-    height: 370px;
-    background-color: #3D7BA6;
+    height: 390px;
+    background-color: #5F697C;
     margin: 20px;
     border-radius: 15px;
     border-style: solid;
@@ -27,8 +27,10 @@
 }
 .Product-Element__Name{
     height: 40px;
+    font-size: 18px;
     font-weight: 600;
-    text-shadow: 1px 1px #0b62a0;
+    color: #ca9222;
+    text-shadow: 3px 3px #0b62a0;
 }
 .Product-Element__Details-Description{
     overflow: hidden;
@@ -46,7 +48,8 @@
     height: 180px;
     border-radius: 15%;
     border-style: solid;
-    border-width: 1px;
+    border-width: 2px;
+    box-shadow: 3px 3px #333333;
 }
 
 .Product-Element__Enter{
